[tool.poetry]
name = "mcstatus"
version = "0.0.0" # version is handled by git tags and poetry-dynamic-versioning
description = "A library to query Minecraft Servers for their status and capabilities."
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Dinnerbone/mcstatus"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
packages = [
    { include = "mcstatus" },
    { include = "protocol", from = "mcstatus" },
    { include = "scripts", from = "mcstatus" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
asyncio-dgram = "1.2.0"
click = ">=7.1.2,<9"
dnspython = "2.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.1.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
twine = "^3.5.0"
black = "^22.1.0"
tox = "^3.24.5"
tox-poetry = "^0.4.1"
pyright = "^0.0.13"
typing-extensions = "^4.0.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-tidy-imports = "^4.6.0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.12.1"
flake8-annotations = "^2.7.0"

[tool.poetry.scripts]
mcstatus = 'mcstatus.scripts.mcstatus:cli'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --doctest-modules --cov=mcstatus --cov-append --cov-branch --cov-report=term-missing -vvv --no-cov-on-fail"
testpaths = ["mcstatus/tests"]

[tool.poetry-dynamic-versioning]
bump = true
enable = true
style = "pep440"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
